created dockerfiles; created invite handlers - create, use; some minor changes in server structure
