# internal/controller/http/handlers.go
@@ -3,7 +3,9 @@ package httpctrl
 import (
 	"bytes"
 	"encoding/json"
+	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/google/uuid"
 	mw "github.com/vlad-marlo/godo/internal/controller/http/middleware"
 	"github.com/vlad-marlo/godo/internal/model"
 	"github.com/vlad-marlo/godo/internal/pkg/fielderr"
@@ -21,7 +23,7 @@ func ReqIDField(reqID string) zap.Field {
 
 // RegisterUser creates user with provided data.
 //
-//	@Tags		UserCreate
+//	@Tags		User
 //	@Summary	Создание пользователя
 //	@ID			user_create
 //	@Accept		json
@@ -63,7 +65,7 @@ func (s *Server) RegisterUser(w http.ResponseWriter, r *http.Request) {
 
 // CreateToken creates JWT bearer token with provided data.
 //
-//	@Tags		CreateToken
+//	@Tags		Tokens
 //	@Summary	Создание JWT токена для пользователя.
 //	@ID			login_jwt
 //	@Accept		json
@@ -71,8 +73,8 @@ func (s *Server) RegisterUser(w http.ResponseWriter, r *http.Request) {
 //	@Param		request	body		model.CreateTokenRequest	true	"User data"
 //	@Success	201		{object}	model.CreateTokenResponse
 //	@Failure	400		{object}	model.Error	"Bad Request"
-//	@Failure	401		{string}	model.Error	"Unauthorized"
-//	@Failure	500		{string}	model.Error	"Internal Server Error"
+//	@Failure	401		{object}	model.Error	"Unauthorized"
+//	@Failure	500		{object}	model.Error	"Internal Server Error"
 //	@Router		/users/token [post]
 func (s *Server) CreateToken(w http.ResponseWriter, r *http.Request) {
 	var req model.CreateTokenRequest
@@ -105,7 +107,7 @@ func (s *Server) CreateToken(w http.ResponseWriter, r *http.Request) {
 
 // Ping godoc.
 //
-//	@Tags		Ping
+//	@Tags		Server
 //	@Summary	Запрос состояния сервиса
 //	@ID			ping
 //	@Accept		plain
@@ -131,20 +133,18 @@ func (s *Server) Ping(w http.ResponseWriter, r *http.Request) {
 
 // CreateGroup create new group.
 //
-//	@Tags						CreateGroup
-//	@Summary					Создание группы пользователей
-//	@ID							group_create
-//	@Accept						json
-//	@Produce					json
-//	@Param						request	body	model.CreateGroupRequest	true	"group data"
-//
-// Success 201 {object} model.CreateGroupResponse
-// Failure 400 {object} model.Error
-// Failure 401 {object} model.Error
-// Failure 409 {object} model.Error
-// Failure 500 {object} model.Error
-//
-//	@securityDefinitions.apikey	ApiKeyAuth
+//	@Tags		Groups
+//	@Summary	Создание группы пользователей
+//	@ID			group_create
+//	@Accept		json
+//	@Produce	json
+//	@Param		request	body		model.CreateGroupRequest	true	"group data"
+//	@Success	201		{object}	model.CreateGroupResponse	"Created"
+//	@Failure	400		{object}	model.Error					"Bad Request"
+//	@Failure	401		{object}	model.Error					"Not Authorized"
+//	@Failure	409		{object}	model.Error					"Conflict"
+//	@Failure	500		{object}	model.Error					"Internal Server Error"
+//	@Router		/groups/ [post]
 func (s *Server) CreateGroup(w http.ResponseWriter, r *http.Request) {
 	// usage of buffer make unnecessary deferring closing of request body. That saves about 6ns
 	// source - (https://go.googlesource.com/proposal/+/refs/heads/master/design/34481-opencoded-defers.md)
@@ -179,14 +179,166 @@ func (s *Server) CreateGroup(w http.ResponseWriter, r *http.Request) {
 	s.respond(w, http.StatusCreated, resp, ReqIDField(reqID))
 }
 
-// InviteUser create new invite link.
+// CreateInviteLink create new invite link.
 //
-// @Tags InviteUser
-// @Summary создание приглашения в группу.
-// @ID invite_user
-// @Accept json
-// @Produce json
-// Param request body model.InviteUserRequest true "invite data"
-func (s *Server) InviteUser(w http.ResponseWriter, r *http.Request) {
+//	@Tags		Invites,Groups
+//	@Summary	создание приглашения в группу.
+//	@ID			invite_user
+//	@Accept		json
+//	@Produce	json
+//	@Param		request	body		model.CreateInviteRequest	true	"invite data"
+//
+//	@Success	201		{object}	model.CreateInviteResponse
+//	@Failure	400		{object}	model.Error
+//	@Failure	401		{object}	model.Error
+//	@Failure	403		{object}	model.Error
+//	@Failure	409		{object}	model.Error
+//	@Failure	500		{object}	model.Error
+//
+//	@Router		/invites [post]
+func (s *Server) CreateInviteLink(w http.ResponseWriter, r *http.Request) {
+	u := mw.UserFromCtx(r.Context())
+	reqID := middleware.GetReqID(r.Context())
+	var req model.CreateInviteRequest
+	var buf bytes.Buffer
 
+	if _, err := io.Copy(&buf, r.Body); err != nil {
+		s.respond(w, http.StatusInternalServerError, nil, zap.Error(err), ReqIDField(reqID))
+		return
+	}
+	_ = r.Body.Close()
+
+	if err := json.NewDecoder(&buf).Decode(&req); err != nil {
+		s.respond(w, http.StatusInternalServerError, nil, zap.Error(err), ReqIDField(reqID))
+	}
+
+	role := &model.Role{
+		Members:  req.Member,
+		Tasks:    req.Task,
+		Reviews:  req.Review,
+		Comments: req.Comment,
+	}
+
+	resp, err := s.srv.CreateInvite(r.Context(), u, req.Group, role, req.Limit)
+	if err != nil {
+
+		if fErr, ok := err.(*fielderr.Error); ok {
+			s.respond(w, fErr.CodeHTTP(), fErr.Data(), append(fErr.Fields(), ReqIDField(reqID))...)
+			return
+		}
+
+		s.respond(w, http.StatusInternalServerError, nil, zap.Error(err), ReqIDField(reqID))
+		return
+	}
+
+	s.respond(w, http.StatusCreated, resp)
+}
+
+// CreateInviteViaGroup create new invite link.
+//
+//	@Tags		Invites,Groups
+//	@Summary	создание приглашения в группу.
+//	@ID			invite_user_groups
+//	@Accept		json
+//	@Produce	json
+//	@Param		request		body		model.CreateInviteViaGroupRequest	true	"invite data"
+//	@Param		group_id	path		string								true	"group id"
+//
+//	@Success	201			{object}	model.CreateInviteResponse
+//	@Failure	400			{object}	model.Error
+//	@Failure	401			{object}	model.Error
+//	@Failure	403			{object}	model.Error
+//	@Failure	409			{object}	model.Error
+//	@Failure	500			{object}	model.Error
+//
+//	@Router		/groups/{group_id}/invite [post]
+func (s *Server) CreateInviteViaGroup(w http.ResponseWriter, r *http.Request) {
+	reqID := middleware.GetReqID(r.Context())
+	u := mw.UserFromCtx(r.Context())
+
+	var req model.CreateInviteViaGroupRequest
+	var buf bytes.Buffer
+
+	if _, err := io.Copy(&buf, r.Body); err != nil {
+		s.respond(w, http.StatusInternalServerError, nil, zap.Error(err), ReqIDField(reqID))
+		return
+	}
+	_ = r.Body.Close()
+
+	group, err := uuid.Parse(chi.URLParam(r, "group_id"))
+	if err != nil {
+		s.respond(w, http.StatusBadRequest, "bad group id", zap.Error(err), ReqIDField(reqID))
+		return
+	}
+
+	if err = json.NewDecoder(&buf).Decode(&req); err != nil {
+		s.respond(w, http.StatusInternalServerError, nil, zap.Error(err), ReqIDField(reqID))
+	}
+
+	role := &model.Role{
+		Members:  req.Member,
+		Tasks:    req.Task,
+		Reviews:  req.Review,
+		Comments: req.Comment,
+	}
+
+	var resp *model.CreateInviteResponse
+	resp, err = s.srv.CreateInvite(r.Context(), u, group, role, req.Limit)
+	if err != nil {
+		if fErr, ok := err.(*fielderr.Error); ok {
+			s.respond(w, fErr.CodeHTTP(), fErr.Data(), append(fErr.Fields(), ReqIDField(reqID))...)
+			return
+		}
+
+		s.respond(w, http.StatusInternalServerError, nil, zap.Error(err), ReqIDField(reqID))
+		return
+	}
+
+	s.respond(w, http.StatusCreated, resp, ReqIDField(reqID))
+
+}
+
+// UseInvite add user to group if invite is good.
+//
+//	@Tags		Groups
+//	@Summary	Использование приглашения в группу.
+//	@ID			apply_user_to_group
+//	@Accept		plain
+//	@Produce	json
+//	@Param		group_id	path		string	true	"group id"
+//	@Param		invite		query		string	true	"invite id"
+//
+//	@Success	201			{string}	model.CreateInviteResponse
+//	@Failure	400			{object}	model.Error
+//	@Failure	401			{object}	model.Error
+//	@Failure	403			{object}	model.Error
+//	@Failure	409			{object}	model.Error
+//	@Failure	500			{object}	model.Error
+//
+//	@Router		/groups/{group_id}/apply [post]
+func (s *Server) UseInvite(w http.ResponseWriter, r *http.Request) {
+	reqID := ReqIDField(middleware.GetReqID(r.Context()))
+
+	user := mw.UserFromCtx(r.Context())
+	group, err := uuid.Parse(chi.URLParam(r, "group_id"))
+	if err != nil {
+		s.internal(w, reqID, zap.Error(err))
+		return
+	}
+	var invite uuid.UUID
+	invite, err = uuid.Parse(r.URL.Query().Get("invite"))
+	if err != nil {
+		s.internal(w, reqID, zap.Error(err))
+		return
+	}
+
+	if err = s.srv.UseInvite(r.Context(), user, group, invite); err != nil {
+		if fErr, ok := err.(*fielderr.Error); ok {
+			s.respond(w, fErr.CodeHTTP(), fErr.Data(), append(fErr.Fields(), reqID)...)
+			return
+		}
+		s.internal(w, reqID, zap.Error(err))
+		return
+	}
+	s.respond(w, http.StatusOK, nil, reqID)
 }
